[package]
name = "cqueue-deadlock"
version = "0.1.0"
authors = ["Nicolas Menard <nicolas.p.menard@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "cqueue-deadlock"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51" }
async-io = "2.4.0"
futures-util = "0.3.31"
async-executor = "1.13.1"
futures-lite = "2.6.0"

[build-dependencies]
embuild = "0.33"
